Fix SVG animation clipping in Firefox/Safari

--- a/erudit/static/sass/layout/_header-public.scss
+++ b/erudit/static/sass/layout/_header-public.scss
@@ -39,6 +39,7 @@ header#site-header {
     svg {
       height: $erudit-logo-height + 10px;
       padding-top: 10px;
+      overflow: visible;
       path, circle {
         @include transition(fill 250ms);
       }
